[gd_scene load_steps=13 format=3 uid="uid://d3yiwgabkh58o"]

[ext_resource type="Theme" uid="uid://bxqcmd2k7v707" path="res://assets/resources/main_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://cp7eliy5mm75n" path="res://scripts/ui/main_menu.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bcwuxgarbilrg" path="res://scenes/modes/match/tennis_match.tscn" id="2_35tjg"]
[ext_resource type="PackedScene" uid="uid://du8s7peje0m24" path="res://scenes/ui/player-selector.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://58fqxcxqa0qr" path="res://scenes/modes/training/tennis_training.tscn" id="3_vob5f"]
[ext_resource type="PackedScene" uid="uid://dglfvla4hwrbu" path="res://scenes/modes/career/new_career.tscn" id="4_0prml"]
[ext_resource type="PackedScene" uid="uid://dao2m7qjha6j2" path="res://scenes/ui/tournament-main-menu.tscn" id="5_yipxn"]
[ext_resource type="PackedScene" uid="uid://r6ewusuy2y2d" path="res://scenes/ui/music_panel.tscn" id="6_u0nle"]
[ext_resource type="PackedScene" uid="uid://bw3wmvsvqsbm5" path="res://scenes/ui/pelota_button.tscn" id="7_lnm77"]

[sub_resource type="Gradient" id="Gradient_bg"]
colors = PackedColorArray(0.05, 0.1, 0.15, 1, 0.1, 0.2, 0.25, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
width = 1920
height = 1080

[sub_resource type="Gradient" id="Gradient_particles"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.2, 0.8, 0.4, 1, 0.4, 1, 0.6, 0.5, 1, 1, 0.2, 0)

[node name="MainMenu" type="Control" unique_id=995015391]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")
level_name = "MainMenuLevel"
match_scence = ExtResource("2_35tjg")
training_scence = ExtResource("3_vob5f")
career_scence = ExtResource("4_0prml")
tournament_scence = ExtResource("5_yipxn")

[node name="BackgroundGradient" type="TextureRect" parent="." unique_id=1355971403]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")
expand_mode = 2

[node name="ParticlesTop" type="CPUParticles2D" parent="." unique_id=732818069]
position = Vector2(300, 200)
amount = 12
lifetime = 8.0
lifetime_randomness = 0.6
emission_shape = 3
emission_rect_extents = Vector2(100, 30)
gravity = Vector2(20, 30)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.1
orbit_velocity_max = 0.1
scale_amount_min = 1.5
scale_amount_max = 3.0
color = Color(0.2, 0.8, 0.4, 0.8)
color_ramp = SubResource("Gradient_particles")
hue_variation_min = -0.3
hue_variation_max = 0.3

[node name="ParticlesBottom" type="CPUParticles2D" parent="." unique_id=1876608816]
position = Vector2(1620, 800)
amount = 12
lifetime = 8.0
lifetime_randomness = 0.6
emission_shape = 3
emission_rect_extents = Vector2(100, 30)
direction = Vector2(-1, 0)
gravity = Vector2(-20, -30)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.1
orbit_velocity_max = 0.1
scale_amount_min = 1.5
scale_amount_max = 3.0
color = Color(1, 0.8, 0.2, 0.7)
color_ramp = SubResource("Gradient_particles")
hue_variation_min = -0.2
hue_variation_max = 0.2

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1965378297]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1895848247]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TitlePanel" type="PanelContainer" parent="CenterContainer/VBoxContainer" unique_id=1046625716]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/TitlePanel" unique_id=750502484]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Title_Label" type="Label" parent="CenterContainer/VBoxContainer/TitlePanel/MarginContainer" unique_id=254033229]
layout_mode = 2
theme = ExtResource("1")
theme_override_font_sizes/font_size = 55
text = "PELOTA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer" unique_id=1829806325]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MenuContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer" unique_id=1437094614]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12
alignment = 1

[node name="Start" parent="CenterContainer/VBoxContainer/MenuContainer" unique_id=2055361805 instance=ExtResource("7_lnm77")]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Start Match"

[node name="Training" parent="CenterContainer/VBoxContainer/MenuContainer" unique_id=499321656 instance=ExtResource("7_lnm77")]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Training"

[node name="Tournament" parent="CenterContainer/VBoxContainer/MenuContainer" unique_id=355603609 instance=ExtResource("7_lnm77")]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Tournament"

[node name="Career" parent="CenterContainer/VBoxContainer/MenuContainer" unique_id=949391600 instance=ExtResource("7_lnm77")]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Career"

[node name="Settings" parent="CenterContainer/VBoxContainer/MenuContainer" unique_id=86379174 instance=ExtResource("7_lnm77")]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Settings"

[node name="Quit" parent="CenterContainer/VBoxContainer/MenuContainer" unique_id=1942397311 instance=ExtResource("7_lnm77")]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "Quit"

[node name="StartMenu" type="VBoxContainer" parent="." unique_id=1832949332]
visible = false
layout_mode = 0
offset_left = 91.0
offset_top = 69.0
offset_right = 639.0
offset_bottom = 429.0

[node name="HBoxContainer" type="HBoxContainer" parent="StartMenu" unique_id=312112120]
layout_mode = 2

[node name="PlayerSelector" parent="StartMenu/HBoxContainer" unique_id=1453222617 instance=ExtResource("3")]
layout_mode = 2

[node name="PlayerSelector2" parent="StartMenu/HBoxContainer" unique_id=337994056 instance=ExtResource("3")]
layout_mode = 2
player_index = 1

[node name="Actions" type="HBoxContainer" parent="StartMenu" unique_id=1029246758]
layout_mode = 2

[node name="Back" type="Button" parent="StartMenu/Actions" unique_id=783577977]
layout_mode = 2
text = "Back"

[node name="Play" type="Button" parent="StartMenu/Actions" unique_id=288214078]
layout_mode = 2
text = "Play"

[node name="MusicPanel" parent="." unique_id=1236886159 instance=ExtResource("6_u0nle")]
layout_mode = 1
offset_left = -576.0
offset_top = -648.0
offset_right = -576.0
offset_bottom = -648.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/Training" to="." method="_on_training_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/Tournament" to="." method="_on_tournament_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/Career" to="." method="_on_career_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="StartMenu/Actions/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="StartMenu/Actions/Play" to="." method="_on_Play_pressed"]
